--- a/mongocar/angular.json
+++ b/mongocar/angular.json
@@ -37,7 +37,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/app/app-styles.css"
             ],
             "scripts": []
           },
